--- a/apache2/conf/bitnami/bitnami-apps-prefix.conf
+++ b/apache2/conf/bitnami/bitnami-apps-prefix.conf
@@ -5,5 +5,5 @@
 #Include "C:/Bitnami/wappstack-7.1.1-0/frameworks/cakephp/conf/httpd-prefix.conf"
 #Include "C:/Bitnami/wappstack-7.1.1-0/frameworks/smarty/conf/httpd-prefix.conf"
 #Include "C:/Bitnami/wappstack-7.1.1-0/frameworks/laravel/conf/httpd-prefix.conf"
-Include "C:/Bitnami/wappstack-7.1.1-0/apps/phppgadmin/conf/httpd-prefix.conf"
-Include "C:/Bitnami/wappstack-7.1.1-0/apps/demo/conf/httpd-prefix.conf"
+Include "../apps/phppgadmin/conf/httpd-prefix.conf"
+Include "../apps/demo/conf/httpd-prefix.conf"
