Change 'test' instances to 'admin'

--- a/apps/admin/conf/httpd-app.conf
+++ b/apps/admin/conf/httpd-app.conf
@@ -1,5 +1,5 @@
 
-<Directory "C:\Bitnami\wappstack-7.1.1-0/apps/test/htdocs">
+<Directory "C:\Bitnami\wappstack-7.1.1-0/apps/admin/htdocs">
     Options Indexes MultiViews
     AllowOverride All
     <IfVersion < 2.3 >
