--- a/apps/admin/conf/httpd-prefix.conf
+++ b/apps/admin/conf/httpd-prefix.conf
@@ -1,5 +1,5 @@
 
-Alias /test/ "C:\Bitnami\wappstack-7.1.1-0/apps/test/htdocs/"
-Alias /test "C:\Bitnami\wappstack-7.1.1-0/apps/test/htdocs"
+Alias /admin/ "C:\Bitnami\wappstack-7.1.1-0/apps/admin/htdocs/"
+Alias /admin "C:\Bitnami\wappstack-7.1.1-0/apps/admin/htdocs"
 
-Include "C:\Bitnami\wappstack-7.1.1-0/apps/test/conf/httpd-app.conf"
+Include "C:\Bitnami\wappstack-7.1.1-0/apps/admin/conf/httpd-app.conf"
