--- a/apps/admin/conf/httpd-vhosts.conf
+++ b/apps/admin/conf/httpd-vhosts.conf
@@ -1,6 +1,6 @@
 
 <VirtualHost *:80>
   ServerName demo.example.com
-  DocumentRoot "C:\Bitnami\wappstack-7.1.1-0/apps/test/htdocs"
-  Include "C:\Bitnami\wappstack-7.1.1-0/apps/test/conf/httpd-app.conf"                                                                                           
+  DocumentRoot "C:\Bitnami\wappstack-7.1.1-0/apps/admin/htdocs"
+  Include "C:\Bitnami\wappstack-7.1.1-0/apps/admin/conf/httpd-app.conf"                                                                                           
 </VirtualHost>
