Include admin link in apps-prefix file

--- a/apache2/conf/bitnami/bitnami-apps-prefix.conf
+++ b/apache2/conf/bitnami/bitnami-apps-prefix.conf
@@ -7,3 +7,4 @@
 #Include "C:/Bitnami/wappstack-7.1.1-0/frameworks/laravel/conf/httpd-prefix.conf"
 Include "../apps/phppgadmin/conf/httpd-prefix.conf"
 Include "../apps/demo/conf/httpd-prefix.conf"
+Include "../apps/admin/conf/httpd-prefix.conf"
